update linked to CAL (still temporal)

--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/1/16"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
@@ -105,18 +105,20 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID20_20231024-0042.cdf'\n",
     "\n",
+    "\"\"\"\n",
     "# 202310 -- FS\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "#data_name = 'SID20_Seq01.cdf'\n",
-    "#data_name = 'SID20_Seq02.cdf'\n",
-    "#data_name = 'SID20_Seq16.cdf'\n",
-    "#data_name = 'SID20_Seq18.cdf'\n",
-    "#data_name = 'SID20_Seq19.cdf'\n",
-    "#data_name = 'SID20_Seq20.cdf'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID20_Seq01.cdf'\n",
+    "data_name = 'SID20_Seq02.cdf'\n",
+    "data_name = 'SID20_Seq16.cdf'\n",
+    "data_name = 'SID20_Seq18.cdf'\n",
+    "data_name = 'SID20_Seq19.cdf'\n",
+    "data_name = 'SID20_Seq20.cdf'\n",
     "\n",
     "# 202312 -- Checkout\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
-    "data_name = 'SID20_RPWI_NEWv2_SCI.cdf'"
+    "data_name = 'SID20_RPWI_NEWv2_SCI.cdf'\n",
+    "\"\"\""
    ]
   },
   {
@@ -296,7 +298,7 @@
     "ax7.plot(np.ravel(data.frequency),     '-r', linewidth=0.6, label='frequency')\n",
     "ax7.plot(np.ravel(data.freq_step*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax7.plot(np.ravel(data.freq_width*10), ':b', linewidth=1.0, label='width*10')\n",
-    "ax8.plot(np.ravel(data.epoch), '.')\n",
+    "ax8.plot(np.ravel(data.epoch[:]), '.')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
@@ -318,7 +320,7 @@
     "# range: X-axis\n",
     "\"\"\"\n",
     "xlim=[0, N_frequency*1-1]\n",
-    "xlim=[50, 60]\n",
+    "# xlim=[50, 60]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
     "# range: Y-axis\n",
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
