--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/16"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "p_raw_min = 3.5                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
@@ -102,7 +102,6 @@
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_20231024-0036.cdf']\n",
-    "\"\"\"\n",
     "data_name_list = ['SID03-2ch-comp0-20231117-1438.cdf']\n",
     "data_name_list = ['SID03-2ch-comp1-20231117-1448.cdf']\n",
     "data_name_list = ['SID03-2ch-comp2-20231117-1500.cdf']\n",
@@ -115,6 +114,7 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_Seq03.cdf']\n",
     "data_name_list = ['SID03_Seq04.cdf']\n",
+    "\"\"\"\n",
     "data_name_list = ['SID03_Seq10.cdf']\n",
     "data_name_list = ['SID03_Seq11.cdf']\n",
     "data_name_list = ['SID03_Seq12.cdf']\n",
@@ -144,12 +144,12 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver. 1 ***\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 2023/4/20 before deployment of MAG-BOOM\n",
     "data_name_list = ['04/20/SID3_20230420T103558-20230420T103800.cdf']\n",
     "\n",
-    "\"\"\"\n",
     "# *** 2023/5/23 before deployment of RWI\n",
     "data_name_list = ['05/23/SID3_20230523T090033-20230523T091021.cdf',\n",
     "                  '05/23/SID3_20230523T092629-20230523T093617.cdf',\n",
