--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/1/16"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
@@ -108,17 +108,19 @@
     "data_name = 'SID04-comp1-20231117-1532.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
-    "#data_name = 'SID04_Seq01.cdf'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
+    "data_name = 'SID04_Seq01.cdf'\n",
     "#data_name = 'SID04_Seq02.cdf'\n",
     "#data_name = 'SID04_Seq16.cdf'\n",
     "#data_name = 'SID04_Seq18.cdf'\n",
     "#data_name = 'SID04_Seq19.cdf'\n",
     "#data_name = 'SID04_Seq20.cdf'\n",
     "\n",
+    "\"\"\"\n",
     "# 202312 -- Checkout\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
-    "data_name = 'SID4_RPWI_NEWv2_SCI.cdf'"
+    "data_name = 'SID4_RPWI_NEWv2_SCI.cdf'\n",
+    "\"\"\""
    ]
   },
   {
