--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/1/16"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "p_raw_min = 1.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)\n",
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
    ]
   },
@@ -106,8 +106,8 @@
     "data_name = 'SID06_20231024-0049.cdf'\n",
     "\n",
     "# 202310 -- FS\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'    # CDF data folder\n",
-    "#data_name = 'SID06_Seq06.cdf'"
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202310_FS/cdf/'    # CDF data folder\n",
+    "data_name = 'SID06_Seq06.cdf'"
    ]
   },
   {
