--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2023/12/24"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/1/16"
    ]
   },
   {
@@ -87,7 +87,7 @@
     "p_raw_min = 4.0                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(band_mode, unit_mode, cal, p_raw_max, p_raw_min)"
+    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)"
    ]
   },
   {
@@ -230,7 +230,7 @@
     "ax2.plot(np.ravel(data.frequency),      '-r', linewidth=0.6, label='frequency')\n",
     "ax2.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
     "ax2.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
-    "ax3.plot(np.ravel(data.epoch), '.')\n",
+    "ax3.plot(np.ravel(data.epoch[:]), '.')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "ax2.set_ylabel('frequency [kHz]')\n",
