minor updates for Jan 2024 data (on-going)

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2023/11/12"
+    "# JUICE RPWI HF HK: QL -- 2024/1/27"
    ]
   },
   {
@@ -59,10 +59,9 @@
    "source": [
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
-    "#data_dir = '/Users/user/0-python/JUICE_data/'                           # CDF data folder\n",
     "base_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/datasets/'\n",
     "\n",
-    "date='20230712'"
+    "date='20240125'"
    ]
   },
   {
@@ -126,9 +125,9 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.:r', label='HF(FPGA)')\n",
+    "    ax1.plot(hk_hf.epoch, temp_hf_fpga, '.r', label='HF(FPGA)')\n",
     "if err_dpu == 0:\n",
-    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.:c', label='HF(PCB)')\n",
+    "    ax1.plot(hk_dpu.epoch, hk_dpu.hf_temp, '.c', label='HF(PCB)')\n",
     "\n",
     "ax1.set_ylabel('HF Temperature [degC]')\n",
     "ax1.legend()\n",
@@ -136,32 +135,32 @@
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.:g', label='RWI CH1')\n",
-    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.:b', label='RWI CH2')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.g', label='RWI CH1')\n",
+    "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.b', label='RWI CH2')\n",
     "\n",
     "ax2.set_ylabel('RWI Temperature [degC]')\n",
     "ax2.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_lvps == 0:\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.:r', label='HF 3.3V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.:g', label='HF 8.5V (LVPS)')\n",
-    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.:k', label='HF ON/OFF (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.vol_hf_85, '.g', label='HF 8.5V (LVPS)')\n",
+    "    ax3.plot(hk_lvps.epoch, hk_lvps.hf_on_off, '.k', label='HF ON/OFF (LVPS)')\n",
     "ax3.set_ylabel('Voltage [V]')\n",
     "ax3.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_lvps == 0:\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.:r', label='HF 3.3V (LVPS)')\n",
-    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.:g', label='HF 8.5V (LVPS) [x10]')\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_33, '.r', label='HF 3.3V (LVPS)')\n",
+    "    ax4.plot(hk_lvps.epoch, hk_lvps.cur_hf_85*10, '.g', label='HF 8.5V (LVPS) [x10]')\n",
     "\n",
     "ax4.set_ylabel('Current [A]')\n",
     "ax4.legend()\n",
     "\n",
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.:r', label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.:b', label='Cal signal ENA')\n",
+    "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', label='Heater ENA')\n",
+    "    ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
     "\n",
     "ax5.set_ylabel('HF status')\n",
     "ax5.legend()\n",
