--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/1/4"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/1/2０"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]      0: sum      1: /Hz\n",
     "unit_mode = 0                           # [Power]      0: raw      1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "cal_mode = 0                            # [Power]      0: background     1: CAL     2; all\n",
+    "cal_mode = 2                            # [Power]      0: background     1: CAL     2; all\n",
     "\n",
     "# *** Unit set ***\n",
     "f_mode = 1                              # [Frequency]  0: linear   1:log  in frequency\n",
@@ -140,11 +140,18 @@
     "data_name_list = [#'SID02_RPWI_HF_FFT_00000.cdf',\n",
     "                  #'SID02_RPWI_HF_FFT_00001.cdf',\n",
     "                  #'SID02_RPWI_HF_FFT_00002.cdf',\n",
-    "                  'SID02_RPWI_HF_FFT_00003.cdf',\n",
-    "                  'SID02_RPWI_HF_FFT_00004.cdf',\n",
-    "                  #'SID02_RPWI_S8_272.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00003.cdf',\n",
+    "                  #'SID02_RPWI_HF_FFT_00004.cdf',\n",
+    "                  'SID02_RPWI_S8_272.cdf',\n",
     "                 ]\n",
+    "\n",
     "\"\"\"\n",
+    "# 202401 -- ErrorCheck\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
+    "data_name_list = [#'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_0_jumps.bin.cdf',\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_21_no_jump.bin.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID2_high.cdf',\n",
+    "                 ]\n",
     "\"\"\""
    ]
   },
@@ -155,6 +162,7 @@
    "outputs": [],
    "source": [
     "# *** Flight - Ver.1\n",
+    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 20230419 ***\n",
@@ -204,7 +212,6 @@
     "                  '07/13/SID2_20230713T042753-20230713T045449.cdf',\n",
     "                  '07/13/SID2_20230713T045543-20230713T050917.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_name_list = ['07/13/SID2_20230713T023720-20230713T030416.cdf',\n",
     "                 ]\n",
     "# all\n",
@@ -546,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep0 = 50;    n_sweep1 = 61 # n_sweep0 + 10\n",
+    "n_sweep0 = 0;    n_sweep1 = n_sweep0 + 10\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep0, n_sweep1, \"in total of\", n_time0)\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "\n",
@@ -601,8 +608,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = 1  # n_time0//2  \n",
-    "n_step0 = 0;  n_step1 = n_step0 + 6\n",
+    "n_sweep = 0  # n_time0//2  \n",
+    "n_step0 = 0;  n_step1 = n_step0 + 3\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0,  \"[Steps]\", n_step0, \"-\", n_step1)\n",
     "\n",
     "fig = plt.figure(figsize=(12, 8))\n",
@@ -700,7 +707,6 @@
    "source": [
     "# cal_unit = juice_cdf.cal_unit(unit_mode, freq_1d)\n",
     "num_freq = freq_1d.shape[0]\n",
-    "\n",
     "for i in range(freq_1d.shape[0]):\n",
     "    print(freq_1d[i])\n",
     "    "
