--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/20"
    ]
   },
   {
@@ -114,7 +114,6 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID03_Seq03.cdf']\n",
     "data_name_list = ['SID03_Seq04.cdf']\n",
-    "\"\"\"\n",
     "data_name_list = ['SID03_Seq10.cdf']\n",
     "data_name_list = ['SID03_Seq11.cdf']\n",
     "data_name_list = ['SID03_Seq12.cdf']\n",
@@ -133,6 +132,12 @@
     "                  'SID03_Seq15.cdf',\n",
     "                  'SID03_Seq17.cdf',\n",
     "                 ]\n",
+    "\n",
+    "# 202401 -- ErrorCheck\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_comp2.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -488,6 +493,40 @@
     "    ax6.plot(np.ravel(data.E_ANGuv), '-r', linewidth=1.0, label='uv')\n",
     "    ax6.plot(np.ravel(data.E_ANGvw), '-g', linewidth=0.8, label='vw')\n",
     "    ax6.plot(np.ravel(data.E_ANGwu), '-b', linewidth=0.6, label='wu')\n",
+    "\n",
+    "if data.complex[0] == 2:    # Matrix\n",
+    "    ax1.plot(np.ravel(data.EuEu_NC), '-r', linewidth=1.2, label='uu')\n",
+    "    ax1.plot(np.ravel(data.EvEv_NC), '-g', linewidth=0.8, label='vv')\n",
+    "    ax1.plot(np.ravel(data.EwEw_NC), '-b', linewidth=0.5, label='ww')\n",
+    "    ax1.plot(np.ravel(data.EuEu_RC), '.r', linewidth=1.2, label='uu')\n",
+    "    ax1.plot(np.ravel(data.EvEv_RC), '.g', linewidth=0.8, label='vv')\n",
+    "    ax1.plot(np.ravel(data.EwEw_RC), '.b', linewidth=0.5, label='ww')\n",
+    "    ax1.plot(np.ravel(data.EuEu_LC), '_r', linewidth=1.2, label='uu')\n",
+    "    ax1.plot(np.ravel(data.EvEv_LC), '_g', linewidth=0.8, label='vv')\n",
+    "    ax1.plot(np.ravel(data.EwEw_LC), '_b', linewidth=0.5, label='ww')\n",
+    "  \n",
+    "    ax2.plot(np.ravel(data.EuEv_re_NC), '-r', linewidth=1.0, label='uv_re')\n",
+    "    ax2.plot(np.ravel(data.EvEw_re_NC), '-g', linewidth=0.8, label='vw_re')\n",
+    "    ax2.plot(np.ravel(data.EwEu_re_NC), '-b', linewidth=0.6, label='wu_re')\n",
+    "    ax2.plot(np.ravel(data.EuEv_im_NC), ':r', linewidth=1.2,  label='uv_im')\n",
+    "    ax2.plot(np.ravel(data.EvEw_im_NC), ':g', linewidth=1.0,  label='vw_im')\n",
+    "    ax2.plot(np.ravel(data.EwEu_im_NC), ':b', linewidth=0.8,  label='wu_im')\n",
+    "    #\n",
+    "    ax3.plot(np.ravel(data.E_DoPuv_NC), '-r', linewidth=1.0, label='uv')\n",
+    "    ax3.plot(np.ravel(data.E_DoPvw_NC), '-g', linewidth=0.8, label='vw')\n",
+    "    ax3.plot(np.ravel(data.E_DoPwu_NC), '-b', linewidth=0.6, label='wu')\n",
+    "    #\n",
+    "    ax4.plot(np.ravel(data.E_DoLuv_NC), '-r', linewidth=1.0, label='uv')\n",
+    "    ax4.plot(np.ravel(data.E_DoLvw_NC), '-g', linewidth=0.8, label='vw')\n",
+    "    ax4.plot(np.ravel(data.E_DoLwu_NC), '-b', linewidth=0.6, label='wu')\n",
+    "    #\n",
+    "    ax5.plot(np.ravel(data.E_DoCuv_NC), '-r', linewidth=1.0, label='uv')\n",
+    "    ax5.plot(np.ravel(data.E_DoCvw_NC), '-g', linewidth=0.8, label='vw')\n",
+    "    ax5.plot(np.ravel(data.E_DoCwu_NC), '-b', linewidth=0.6, label='wu')\n",
+    "    #\n",
+    "    ax6.plot(np.ravel(data.E_ANGuv_NC), '-r', linewidth=1.0, label='uv')\n",
+    "    ax6.plot(np.ravel(data.E_ANGvw_NC), '-g', linewidth=0.8, label='vw')\n",
+    "    ax6.plot(np.ravel(data.E_ANGwu_NC), '-b', linewidth=0.6, label='wu')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "ax8.set_ylabel('Date-Time')\n",
