minor update after CheckOut#1

--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID22 (PSSR2 rich): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -87,7 +87,10 @@
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "\n",
+    "# *** Directory set: set by User ***\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'                         # Plot dump folder"
    ]
   },
   {
@@ -97,10 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'                         # Plot dump folder\n",
-    "\n",
-    "# *** Ver.2 ***\n",
+    "# *** Ground data: Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folderdata_name = 'SID21_20231024-0046.cdf'\n",
     "data_name = 'SID22_20231024-0049.cdf'\n",
@@ -108,6 +108,21 @@
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'    # CDF data folder\n",
     "data_name = 'SID22_Seq06.cdf'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6212d31f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID22_20240126T091728_V01.cdf'\n",
+    "\"\"\"\n",
+    "\"\"\""
    ]
   },
   {
