--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/1/2０"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "\n",
     "# *** Unit set ***\n",
     "f_mode = 1                              # [Frequency]  0: linear   1:log  in frequency\n",
-    "time_mode = 1                           # [Time]       0: Epoch    1: data number\n",
+    "time_mode = 0                           # [Time]       0: Epoch    1: data number\n",
     "# spec_mode = 1                         # 0: low-resoltion   1: high-resolution\n",
     "# ave_mode = 2                          # 0: simple sum      1: FFT sum     2: median sum   3: min sum\n",
     "# clean_mode = 0                        # 0: normal  1: cleaning in time   2: cleaning in time & frequency\n",
@@ -116,6 +116,7 @@
    "outputs": [],
    "source": [
     "# *** Ground - Ver.2 ***\n",
+    "\"\"\"\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name_list = ['SID02_20231007-0349.cdf',\n",
@@ -145,7 +146,6 @@
     "                  'SID02_RPWI_S8_272.cdf',\n",
     "                 ]\n",
     "\n",
-    "\"\"\"\n",
     "# 202401 -- ErrorCheck\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
     "data_name_list = [#'JUICE_L1a_RPWI-HF-SID2_FSW1_1F_0_jumps.bin.cdf',\n",
@@ -158,11 +158,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2666c932",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Flight - Ver.1\n",
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',\n",
+    "                 ]\n",
     "\"\"\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "# *** Flight - Ver.1\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2023/'        # CDF data folder\n",
     "\n",
     "# *** 20230419 ***\n",
@@ -569,7 +586,7 @@
     "ax3.plot(np.ravel(data.Ew_q[n_sweep0:n_sweep1]), ':g', linewidth=.5, label='Ew_q')\n",
     "ax4.plot(np.ravel(data.frequency[n_sweep0:n_sweep1]),  '-b', linewidth=.5, label='Frequency');\n",
     "ax4.plot(np.ravel(data.sweep_start[n_sweep0:n_sweep1])*data.frequency[n_sweep0][-1][0], '-r', label='Sweep Start')\n",
-    "ax5.plot(np.ravel(data.epoch[n_sweep0-1:n_sweep1]), '.')\n",
+    "ax5.plot(np.ravel(data.epoch[n_sweep0:n_sweep1+1]), '.')\n",
     "ax1.set_ylabel('Eu');  ax2.set_ylabel('Ev');  ax3.set_ylabel('Ew');  ax4.set_ylabel('Frequency [kHz]');  \n",
     "date1 = data.epoch[n_sweep0];  date1 = date1.strftime('%Y/%m/%d %R:%S');  ax4.set_xlabel(date1)\n",
     "#\n",
@@ -885,7 +902,7 @@
     "xlim=[f_min+30000, f_max+30000];  ax7.set_xlim(xlim); xlim=[f_min+35000, f_max+35000];  ax8.set_xlim(xlim)\n",
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
     "\n",
-    "# range: Y-axis\n",
+    "# range\n",
     "\"\"\"\n",
     "ylim=[10**p_min, 10**p_max]\n",
     "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
