--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/20"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -76,7 +76,7 @@
     "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
-    "time_mode = 1                           # 0: Epoch    1: data number\n",
+    "time_mode = 0                           # 0: Epoch    1: data number\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
@@ -136,6 +136,22 @@
     "# 202401 -- ErrorCheck\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_comp2.cdf',\n",
+    "                 ]\n",
+    "\"\"\"\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7da144e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240126T083835_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
@@ -450,13 +466,13 @@
    "outputs": [],
    "source": [
     "if data.complex[0] == 0:    # power\n",
-    "    fig = plt.figure(figsize=(12, 6))\n",
-    "    ax1 = fig.add_subplot(3, 1, 1);  ax7 = fig.add_subplot(3, 1, 2);  ax8 = fig.add_subplot(3, 1, 3)\n",
+    "    fig = plt.figure(figsize=(12, 8))\n",
+    "    ax1 = fig.add_subplot(4, 1, 1);  ax7 = fig.add_subplot(4, 1, 2); ax8 = fig.add_subplot(4, 1, 3);  ax9 = fig.add_subplot(4, 1, 4)\n",
     "else:                       # matrix\n",
-    "    fig = plt.figure(figsize=(12, 14))\n",
-    "    ax1 = fig.add_subplot(8, 1, 1);  ax7 = fig.add_subplot(8, 1, 7);  ax8 = fig.add_subplot(8, 1, 8)\n",
-    "    ax2 = fig.add_subplot(8, 1, 2); ax3 = fig.add_subplot(8, 1, 3); ax4 = fig.add_subplot(8, 1, 4)\n",
-    "    ax5 = fig.add_subplot(8, 1, 5); ax6 = fig.add_subplot(8, 1, 6) \n",
+    "    fig = plt.figure(figsize=(12, 16))\n",
+    "    ax1 = fig.add_subplot(9, 1, 1); ax7 = fig.add_subplot(9, 1, 7);  ax8 = fig.add_subplot(9, 1, 8);  ax9 = fig.add_subplot(9, 1, 9)\n",
+    "    ax2 = fig.add_subplot(9, 1, 2); ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
+    "    ax5 = fig.add_subplot(9, 1, 5); ax6 = fig.add_subplot(9, 1, 6) \n",
     "\n",
     "ax1.plot(np.ravel(data.EuEu), '-r', linewidth=1.2, label='uu')\n",
     "ax1.plot(np.ravel(data.EvEv), '-g', linewidth=0.8, label='vv')\n",
@@ -468,7 +484,11 @@
     "ax7.plot(np.ravel(data.frequency),     '-r', linewidth=0.6, label='frequency')\n",
     "ax7.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
     "ax7.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
-    "ax8.plot(np.ravel(data.epoch), '.')\n",
+    "ax8.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "ax8.plot(np.ravel(data.cal_signal*10), '-k', label='CAL')\n",
+    "ax9.plot(np.ravel(data.epoch), '.')\n",
     "#\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax2.plot(np.ravel(data.EuEv_re), '-r', linewidth=1.0, label='uv_re')\n",
@@ -528,8 +548,7 @@
     "    ax6.plot(np.ravel(data.E_ANGvw_NC), '-g', linewidth=0.8, label='vw')\n",
     "    ax6.plot(np.ravel(data.E_ANGwu_NC), '-b', linewidth=0.6, label='wu')\n",
     "\n",
-    "ax1.set_ylabel(power_str)\n",
-    "ax8.set_ylabel('Date-Time')\n",
+    "ax1.set_ylabel(power_str);  ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
@@ -537,16 +556,17 @@
     "#\n",
     "title_label = '[JUICE/RPWI HF Full (SID-3)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
-    "ax1.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
+    "ax1.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8); ax8.legend(loc='upper right', fontsize=8)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
     "\n",
     "# range: X-axis\n",
     "\"\"\"\n",
-    "xlim=[0, N_frequency*1-1]\n",
-    "xlim=[50, 60]\n",
+    "num_x = 10\n",
+    "xlim=[0, N_frequency*num_x-1]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim)\n",
+    "xlim=[0, num_x-1]; ax8.set_xlim(xlim)\n",
     "\"\"\"\n",
     "# range: Y-axis\n",
     "if data.complex[0] > 0:    # Matrix\n",
