--- a/JUICE-CDF-HF-SID4_sample.ipynb
+++ b/JUICE-CDF-HF-SID4_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID4 (Burst surv): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -124,6 +124,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32298bd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID4_20240126T113727_V01.cdf'\n",
+    "\"\"\"\n",
+    "\"\"\""
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "093823c4",
@@ -178,7 +193,12 @@
     "    N_component = 21\n",
     "print(\"Ch:\", N_ch, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
-    "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time)"
+    "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time)\n",
+    "\n",
+    "# print(data.epoch)\n",
+    "# print(data.T_HF_FPGA)\n",
+    "# print(data.T_RWI_CH1)\n",
+    "# print(data.T_RWI_CH2)"
    ]
   },
   {
@@ -246,15 +266,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 14))\n",
-    "ax1 = fig.add_subplot(8, 1, 1)\n",
-    "ax2 = fig.add_subplot(8, 1, 2)\n",
-    "ax3 = fig.add_subplot(8, 1, 3)\n",
-    "ax4 = fig.add_subplot(8, 1, 4)\n",
-    "ax5 = fig.add_subplot(8, 1, 5)\n",
-    "ax6 = fig.add_subplot(8, 1, 6)\n",
-    "ax7 = fig.add_subplot(8, 1, 7)\n",
-    "ax8 = fig.add_subplot(8, 1, 8)\n",
+    "fig = plt.figure(figsize=(12, 16))\n",
+    "ax1 = fig.add_subplot(9, 1, 1)\n",
+    "ax2 = fig.add_subplot(9, 1, 2)\n",
+    "ax3 = fig.add_subplot(9, 1, 3)\n",
+    "ax4 = fig.add_subplot(9, 1, 4)\n",
+    "ax5 = fig.add_subplot(9, 1, 5)\n",
+    "ax6 = fig.add_subplot(9, 1, 6)\n",
+    "ax7 = fig.add_subplot(9, 1, 7)\n",
+    "ax8 = fig.add_subplot(9, 1, 8)\n",
+    "ax9 = fig.add_subplot(9, 1, 9)\n",
     "\n",
     "ax1.plot(np.ravel(data.EuEu), '-r', linewidth=1.2, label='uu')\n",
     "ax1.plot(np.ravel(data.EvEv), '-g', linewidth=0.8, label='vv')\n",
@@ -288,19 +309,22 @@
     "ax7.plot(np.ravel(data.frequency),     '-r', linewidth=0.6, label='frequency')\n",
     "ax7.plot(np.ravel(data.freq_step*10),  '-g', linewidth=0.8, label='step*10')\n",
     "ax7.plot(np.ravel(data.freq_width*10), ':b', linewidth=1.0, label='width*10')\n",
-    "ax8.plot(np.ravel(data.epoch), '.')\n",
+    "ax8.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "ax8.plot(np.ravel(data.cal_signal*10), '-k', label='CAL')\n",
+    "ax9.plot(np.ravel(data.epoch), '.')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
     "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.'); \n",
-    "ax7.set_ylabel('frequency [kHz]')\n",
-    "ax8.set_ylabel('Date-Time')\n",
-    "ax8.set_xlabel(str_date)\n",
+    "ax7.set_ylabel('frequency [kHz]');         ax8.set_ylabel('T [degC]');     ax9.set_ylabel('Date-Time')\n",
+    "ax9.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF Burst-Surv (SID-4)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
-    "ax1.legend(loc='upper right', fontsize=8); ax7.legend(loc='upper right', fontsize=8)\n",
+    "ax1.legend(loc='upper right', fontsize=8); ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8)\n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
