--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -87,7 +87,10 @@
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "\n",
+    "# *** Directory set: set by User ***\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
    ]
   },
   {
@@ -97,9 +100,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "\n",
     "# *** Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
@@ -112,6 +112,21 @@
     "data_name = 'SID07_Seq07.cdf'\n",
     "#data_name = 'SID07_Seq08.cdf'\n",
     "#data_name = 'SID07_Seq09.cdf'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d10ac25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID7_20240126T092930_V01.cdf'\n",
+    "\"\"\"\n",
+    "\"\"\""
    ]
   },
   {
