--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/1/30"
    ]
   },
   {
@@ -87,7 +87,9 @@
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
     "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)"
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "\n",
+    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
    ]
   },
   {
@@ -97,10 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Directory set: set by User ***\n",
-    "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder\n",
-    "\n",
-    "# *** Ver.2 ***\n",
+    "# *** Ground Test data: Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID23_20231024-0011.cdf'\n",
@@ -112,6 +111,22 @@
     "data_name = 'SID23_Seq07.cdf'\n",
     "#data_name = 'SID23_Seq08.cdf'\n",
     "#data_name = 'SID23_Seq09.cdf'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b15a8cdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Flight data: Ver.2 ***\n",
+    "# 20240126\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T092930_V01.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID23_20240126T094802_V01.cdf'\n",
+    "\"\"\"\n",
+    "\"\"\""
    ]
   },
   {
@@ -227,7 +242,7 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-5\n",
+    "n_sweep = n_time0-4\n",
     "n_block = n_block0\n",
     "print(\"[specific sweep]  SWEEP:\", n_sweep, \"in total of\", n_time0, \"   Block:\", n_block, \"in total of\", data.N_block[0])\n",
     "\n",
@@ -279,7 +294,7 @@
    "outputs": [],
    "source": [
     "n_sweep = np.int16(n_time0/2)\n",
-    "n_sweep = n_time0-5\n",
+    "n_sweep = n_time0-4\n",
     "n_block = 1\n",
     "print(\"[specific block]  SWEEP:\", n_sweep, \"in total of \", n_time0, \"   Block:\", n_block, \"in total of \", data.N_block[0])\n",
     "\n",
@@ -500,7 +515,11 @@
     "ax1.legend(loc='upper right', fontsize=8);  \n",
     "ax4.legend(loc='upper right', fontsize=8);  ax5.legend(loc='upper right', fontsize=8);   ax6.legend(loc='upper right', fontsize=8)\n",
     "\n",
-    "# range: Y-axis\n",
+    "# range\n",
+    "\"\"\"\n",
+    "xlim=[1388, 1400]\n",
+    "ax1.set_xlim(xlim);  ax4.set_xlim(xlim);  ax5.set_xlim(xlim);  ax6.set_xlim(xlim)\n",
+    "\"\"\"\n",
     "ylim=[10**(p_raw_min-4), 10**(p_raw_max)]\n",
     "ax1.set_ylim(ylim);  ax4.set_ylim(ylim);  ax5.set_ylim(ylim);  ax6.set_ylim(ylim)\n",
     "\n",
@@ -675,7 +694,7 @@
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
-    "ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); ax6.set_xlabel('Time [sec]')\n",
+    "ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); ax4.set_xlabel('Time [sec]')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Mid: %Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
@@ -727,7 +746,7 @@
     "ax2.plot(data.time[0][0], np.ravel(auto.EuEu[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax3.plot(data.time[0][0], np.ravel(auto.EvEv[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
     "ax4.plot(data.time[0][0], np.ravel(auto.EwEw[n_sweep][n_block-1][:]), '-b', linewidth=.5, label='last')\n",
-    "ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); ax6.set_xlabel('Time [sec]')\n",
+    "ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); ax4.set_xlabel('Time [sec]')\n",
     "#\n",
     "date1 = data.epoch[n_sweep];  date1 = date1.strftime('Last: %Y/%m/%d %R:%S')\n",
     "title_date = \"[\" + data_name + \"]  \" + date1;  ax1.set_title(title_date)\n",
